--- a/src/Droid/packages.config
+++ b/src/Droid/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CodeMill.VMFirstNav" version="1.0.1.31" targetFramework="monoandroid71" />
   <package id="Microsoft.Cognitive.CustomVision.Training" version="1.2.0" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="monoandroid71" />
