--- a/src/CongnitiveEye.Forms/CongnitiveEye.Forms.csproj
+++ b/src/CongnitiveEye.Forms/CongnitiveEye.Forms.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.10" />
     <PackageReference Include="CodeMill.VMFirstNav" Version="1.0.1.31" />
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.10" />
+    <PackageReference Include="Xam.Plugin.Media" Version="3.1.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
@@ -32,6 +33,15 @@
     </Compile>
     <Compile Update="Views\ProjectsView.xaml.cs">
       <DependentUpon>ProjectsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ProjectTagView.xaml.cs">
+      <DependentUpon>ProjectTagsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ProjectTagsView.xaml.cs">
+      <DependentUpon>ProjectTagsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ProjectImageView.xaml.cs">
+      <DependentUpon>ProjectImageView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
