--- a/src/iOS/packages.config
+++ b/src/iOS/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.UserDialogs" version="7.0.1" targetFramework="xamarinios10" />
+  <package id="BTProgressHUD" version="1.2.0.6" targetFramework="xamarinios10" />
   <package id="CodeMill.VMFirstNav" version="1.0.1.31" targetFramework="xamarinios10" />
   <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.10" targetFramework="xamarinios10" />
   <package id="Microsoft.Cognitive.CustomVision.Training" version="1.2.0" targetFramework="xamarinios10" />
