Nuget Added for Android Build

--- a/src/Droid/packages.config
+++ b/src/Droid/packages.config
@@ -3,6 +3,7 @@
   <package id="Acr.UserDialogs" version="7.0.1" targetFramework="monoandroid71" />
   <package id="AndHUD" version="1.2.0" targetFramework="monoandroid71" />
   <package id="CodeMill.VMFirstNav" version="1.0.1.31" targetFramework="monoandroid71" />
+  <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.10" targetFramework="monoandroid71" />
   <package id="Microsoft.Cognitive.CustomVision.Training" version="1.2.0" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="monoandroid71" />
