--- a/src/iOS/CognitiveEye.iOS.csproj
+++ b/src/iOS/CognitiveEye.iOS.csproj
@@ -183,6 +183,9 @@
     <BundleResource Include="Resources\eye.png" />
     <BundleResource Include="Resources\eye%402x.png" />
     <BundleResource Include="Resources\eye%403x.png" />
+    <BundleResource Include="Resources\chevron_down.png" />
+    <BundleResource Include="Resources\chevron_down%402x.png" />
+    <BundleResource Include="Resources\chevron_down%403x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.5.0.280555\build\netstandard1.0\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.5.0.280555\build\netstandard1.0\Xamarin.Forms.targets')" />
