--- a/src/iOS/packages.config
+++ b/src/iOS/packages.config
@@ -54,5 +54,6 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="3.1.3" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.5.0.280555" targetFramework="xamarinios10" />
 </packages>
