--- a/src/CongnitiveEye.Forms/CongnitiveEye.Forms.csproj
+++ b/src/CongnitiveEye.Forms/CongnitiveEye.Forms.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Xam.Plugin.Media" Version="3.1.3" />
     <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.6.0" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.6.0" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.6.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
