--- a/src/iOS/packages.config
+++ b/src/iOS/packages.config
@@ -4,6 +4,10 @@
   <package id="BTProgressHUD" version="1.2.0.6" targetFramework="xamarinios10" />
   <package id="CodeMill.VMFirstNav" version="1.0.1.31" targetFramework="xamarinios10" />
   <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.10" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter" version="1.6.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Analytics" version="1.6.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Crashes" version="1.6.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Distribute" version="1.6.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Cognitive.CustomVision.Training" version="1.2.0" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="xamarinios10" />
