--- a/src/iOS/CognitiveEye.iOS.csproj
+++ b/src/iOS/CognitiveEye.iOS.csproj
@@ -195,6 +195,7 @@
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
     <None Include="packages.config" />
+    <None Include="appcenter-pre-build.sh" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
