--- a/src/CongnitiveEye.Forms/CongnitiveEye.Forms.csproj
+++ b/src/CongnitiveEye.Forms/CongnitiveEye.Forms.csproj
@@ -6,8 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
-    <PackageReference Include="Microsoft.Cognitive.CustomVision.Training" Version="1.2.0" />
-    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.10" />
     <PackageReference Include="CodeMill.VMFirstNav" Version="1.0.1.31" />
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.10" />
     <PackageReference Include="Xam.Plugin.Media" Version="3.1.3" />
@@ -16,6 +14,8 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.6.0" />
     <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.6.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.6.0" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training" Version="0.10.0-preview" />
+    <PackageReference Include="SkiaSharp.Views.Forms" Version="1.60.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
