--- a/src/Droid/packages.config
+++ b/src/Droid/packages.config
@@ -4,9 +4,10 @@
   <package id="AndHUD" version="1.2.0" targetFramework="monoandroid71" />
   <package id="CodeMill.VMFirstNav" version="1.0.1.31" targetFramework="monoandroid71" />
   <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.10" targetFramework="monoandroid71" />
-  <package id="Microsoft.Cognitive.CustomVision.Training" version="1.2.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training" version="0.10.0-preview" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="monoandroid71" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="monoandroid71" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
