--- a/src/iOS/packages.config
+++ b/src/iOS/packages.config
@@ -8,9 +8,10 @@
   <package id="Microsoft.AppCenter.Analytics" version="1.6.0" targetFramework="xamarinios10" />
   <package id="Microsoft.AppCenter.Crashes" version="1.6.0" targetFramework="xamarinios10" />
   <package id="Microsoft.AppCenter.Distribute" version="1.6.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.Cognitive.CustomVision.Training" version="1.2.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training" version="0.10.0-preview" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="xamarinios10" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="xamarinios10" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
