--- a/src/Droid/packages.config
+++ b/src/Droid/packages.config
@@ -13,6 +13,9 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.Permissions" version="2.2.1" targetFramework="monoandroid71" />
+  <package id="SkiaSharp" version="1.60.0" targetFramework="monoandroid71" />
+  <package id="SkiaSharp.Views" version="1.60.0" targetFramework="monoandroid71" />
+  <package id="SkiaSharp.Views.Forms" version="1.60.0" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
@@ -56,6 +59,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Media" version="3.1.3" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.OnDeviceCustomVision" version="1.0.0" targetFramework="monoandroid71" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
@@ -73,5 +77,11 @@
   <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.CustomControls.RepeaterView" version="1.2.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading" version="2.4.3.840" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.4.3.840" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Svg" version="2.4.3.840" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.4.3.840" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.4.3.840" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.5.0.280555" targetFramework="monoandroid71" />
 </packages>
