--- a/src/iOS/CognitiveEye.iOS.csproj
+++ b/src/iOS/CognitiveEye.iOS.csproj
@@ -168,6 +168,57 @@
     <Reference Include="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training">
       <HintPath>..\packages\Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training.0.10.0-preview\lib\netstandard1.4\Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training.dll</HintPath>
     </Reference>
+    <Reference Include="SkiaSharp">
+      <HintPath>..\packages\SkiaSharp.1.60.0\lib\XamariniOS\SkiaSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="SkiaSharp.Views.iOS">
+      <HintPath>..\packages\SkiaSharp.Views.1.60.0\lib\XamariniOS\SkiaSharp.Views.iOS.dll</HintPath>
+    </Reference>
+    <Reference Include="SkiaSharp.Views.Forms">
+      <HintPath>..\packages\SkiaSharp.Views.Forms.1.60.0\lib\XamariniOS\SkiaSharp.Views.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.DownloadManager.Abstractions">
+      <HintPath>..\packages\Xam.Plugins.DownloadManager.1.3.6\lib\Xamarin.iOS10\Plugin.DownloadManager.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.DownloadManager">
+      <HintPath>..\packages\Xam.Plugins.DownloadManager.1.3.6\lib\Xamarin.iOS10\Plugin.DownloadManager.dll</HintPath>
+    </Reference>
+    <Reference Include="Microcharts">
+      <HintPath>..\packages\Microcharts.0.8.3-pre\lib\Xamarin.iOS10\Microcharts.dll</HintPath>
+    </Reference>
+    <Reference Include="Microcharts.iOS">
+      <HintPath>..\packages\Microcharts.0.8.3-pre\lib\Xamarin.iOS10\Microcharts.iOS.dll</HintPath>
+    </Reference>
+    <Reference Include="Microcharts.Forms">
+      <HintPath>..\packages\Microcharts.Forms.0.8.3-pre\lib\netstandard1.3\Microcharts.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="WebP.Touch">
+      <HintPath>..\packages\WebP.Touch.1.0.8\lib\Xamarin.iOS10\WebP.Touch.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading">
+      <HintPath>..\packages\Xamarin.FFImageLoading.2.4.3.840\lib\Xamarin.iOS10\FFImageLoading.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Platform">
+      <HintPath>..\packages\Xamarin.FFImageLoading.2.4.3.840\lib\Xamarin.iOS10\FFImageLoading.Platform.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Forms">
+      <HintPath>..\packages\Xamarin.FFImageLoading.Forms.2.4.3.840\lib\Xamarin.iOS10\FFImageLoading.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Forms.Platform">
+      <HintPath>..\packages\Xamarin.FFImageLoading.Forms.2.4.3.840\lib\Xamarin.iOS10\FFImageLoading.Forms.Platform.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Transformations">
+      <HintPath>..\packages\Xamarin.FFImageLoading.Transformations.2.4.3.840\lib\Xamarin.iOS10\FFImageLoading.Transformations.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Svg.Platform">
+      <HintPath>..\packages\Xamarin.FFImageLoading.Svg.2.4.3.840\lib\Xamarin.iOS10\FFImageLoading.Svg.Platform.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Svg.Forms">
+      <HintPath>..\packages\Xamarin.FFImageLoading.Svg.Forms.2.4.3.840\lib\Xamarin.iOS10\FFImageLoading.Svg.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.CustomControls.RepeaterView">
+      <HintPath>..\packages\Xamarin.CustomControls.RepeaterView.1.2.2\lib\netstandard1.0\Xamarin.CustomControls.RepeaterView.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
@@ -190,6 +241,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Services\" />
+    <Folder Include="Utilities\" />
+    <Folder Include="Renderers\" />
+    <Folder Include="Util\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -204,6 +259,11 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Helpers\Settings.cs" />
+    <Compile Include="Services\OnDeviceCustomVision.cs" />
+    <Compile Include="Utilities\ImageClassifier.cs" />
+    <Compile Include="Renderers\CameraPageRenderer.cs" />
+    <Compile Include="Utilities\CameraView.cs" />
+    <Compile Include="Renderers\ShadowNavigationBarRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CongnitiveEye.Forms\CongnitiveEye.Forms.csproj">
@@ -230,6 +290,21 @@
     <BundleResource Include="Resources\device.png" />
     <BundleResource Include="Resources\device%402x.png" />
     <BundleResource Include="Resources\device%403x.png" />
+    <BundleResource Include="Resources\background.jpg" />
+    <BundleResource Include="Resources\background%403x.jpg" />
+    <BundleResource Include="Resources\background%402x.jpg" />
+    <BundleResource Include="Resources\background2.jpg" />
+    <BundleResource Include="Resources\background2%403x.jpg" />
+    <BundleResource Include="Resources\background2%402x.jpg" />
+    <BundleResource Include="Resources\background3.jpg" />
+    <BundleResource Include="Resources\background3%403xjpg" />
+    <BundleResource Include="Resources\background3%402x.jpg" />
+    <BundleResource Include="Resources\background4.jpg" />
+    <BundleResource Include="Resources\background4%403x.jpg" />
+    <BundleResource Include="Resources\background4%402x.jpg" />
+    <BundleResource Include="Resources\background5.jpg" />
+    <BundleResource Include="Resources\background5%403x.jpg" />
+    <BundleResource Include="Resources\background5%402x.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.5.0.280555\build\netstandard1.0\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.5.0.280555\build\netstandard1.0\Xamarin.Forms.targets')" />
