--- a/src/iOS/packages.config
+++ b/src/iOS/packages.config
@@ -4,6 +4,8 @@
   <package id="BTProgressHUD" version="1.2.0.6" targetFramework="xamarinios10" />
   <package id="CodeMill.VMFirstNav" version="1.0.1.31" targetFramework="xamarinios10" />
   <package id="DLToolkit.Forms.Controls.FlowListView" version="2.0.10" targetFramework="xamarinios10" />
+  <package id="Microcharts" version="0.8.3-pre" targetFramework="xamarinios10" />
+  <package id="Microcharts.Forms" version="0.8.3-pre" targetFramework="xamarinios10" />
   <package id="Microsoft.AppCenter" version="1.6.0" targetFramework="xamarinios10" />
   <package id="Microsoft.AppCenter.Analytics" version="1.6.0" targetFramework="xamarinios10" />
   <package id="Microsoft.AppCenter.Crashes" version="1.6.0" targetFramework="xamarinios10" />
@@ -16,6 +18,9 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
   <package id="Plugin.Permissions" version="2.2.1" targetFramework="xamarinios10" />
+  <package id="SkiaSharp" version="1.60.0" targetFramework="xamarinios10" />
+  <package id="SkiaSharp.Views" version="1.60.0" targetFramework="xamarinios10" />
+  <package id="SkiaSharp.Views.Forms" version="1.60.0" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
@@ -56,9 +61,18 @@
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="WebP.Touch" version="1.0.8" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="3.1.3" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.DownloadManager" version="1.3.6" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="Xamarin.CustomControls.RepeaterView" version="1.2.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.4.3.840" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.4.3.840" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Svg" version="2.4.3.840" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.4.3.840" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.4.3.840" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.5.0.280555" targetFramework="xamarinios10" />
 </packages>
