--- a/src/Droid/packages.config
+++ b/src/Droid/packages.config
@@ -35,6 +35,7 @@
   <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="monoandroid71" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid71" />
@@ -78,6 +79,7 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.CustomControls.RepeaterView" version="1.2.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Essentials" version="0.8.0-preview" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading" version="2.4.3.840" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.4.3.840" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Svg" version="2.4.3.840" targetFramework="monoandroid71" />
