--- a/src/iOS/packages.config
+++ b/src/iOS/packages.config
@@ -40,6 +40,7 @@
   <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
@@ -69,6 +70,7 @@
   <package id="Xam.Plugins.DownloadManager" version="1.3.6" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
   <package id="Xamarin.CustomControls.RepeaterView" version="1.2.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Essentials" version="0.8.0-preview" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading" version="2.4.3.840" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.4.3.840" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Svg" version="2.4.3.840" targetFramework="xamarinios10" />
